Fixed navbar not showing up in Auth view

--- a/src/assets/scss/core/_navbar.scss
+++ b/src/assets/scss/core/_navbar.scss
@@ -103,6 +103,10 @@
         padding-top: 10px;
     }
 
+    &.navbar-auth{
+        z-index: 5;
+    }
+
     .navbar-wrapper{
         display: inline-flex;
         align-items: center;
